<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_id"
        android:id="@+id/idLabel"
        android:layout_marginEnd="4dp"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idField"
        android:inputType="none"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nameLabel"
        android:layout_marginEnd="4dp"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameField"
        android:inputType="text"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/addressLabel"
        android:layout_marginEnd="4dp"
        android:layout_row="3"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addressField"
        android:inputType="none"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:id="@+id/latLabel"
        android:layout_marginEnd="4dp"
        android:layout_row="4"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latField"
        android:inputType="none"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:id="@+id/longLabel"
        android:layout_marginEnd="4dp"
        android:layout_row="5"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longField"
        android:inputType="none"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_bikes"
        android:id="@+id/numBikesLabel"
        android:layout_marginEnd="4dp"
        android:layout_row="6"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numBikesField"
        android:inputType="none"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveBtn"
        android:onClick="saveBikeName"
        android:enabled="false"
        android:layout_marginTop="7dp"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:id="@+id/showMapBtn"
        android:onClick="search"
        android:enabled="false"
        android:layout_marginTop="7dp"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:layout_column="1" />

</GridLayout>